openshift/llamastack-v0.3.5/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llamastack-test-v035
  namespace: claims-demo
  labels:
    app: llamastack-v035
    version: v0.3.5+rhai0
spec:
  to:
    kind: Service
    name: llamastack-test-v035
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
